fixed navbar/added z-index

--- a/hoodie.css
+++ b/hoodie.css
@@ -20,6 +20,10 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+nav {
+  z-index: 999;
+}
+
 .menu {
   width: 100%;
   margin-bottom: 1rem;
